--- a/elixir_runtime/priv/docker/Dockerfile.build
+++ b/elixir_runtime/priv/docker/Dockerfile.build
@@ -1,4 +1,16 @@
-FROM stratospire/aws-lambda-elixir-runtime-builder:1.9.1
+FROM elixir:1.9.1
+
+RUN apt-get update && \
+    apt-get install -y \
+      zip \
+    && \
+    rm -rf /var/lib/apt/lists/* && \
+    mkdir /workspace
+
+RUN mix local.hex --force && \
+    mix hex.info
+
+WORKDIR /workspace
 
 COPY . .
 
