--- a/elixir_runtime/priv/docker/Dockerfile.build
+++ b/elixir_runtime/priv/docker/Dockerfile.build
@@ -18,10 +18,10 @@ ARG MIX_ENV=prod
 ENV MIX_ENV=${MIX_ENV}
 
 RUN mix do \
-  deps.get,
-  compile,
-  release --no-compile --overwrite,
-  lambda.bootstrap --no-compile --overwrite,
-  lambda.zip --no-compile --overwrite
+    deps.get, \
+    compile, \
+    release --no-compile --overwrite, \
+    lambda.bootstrap --no-compile --overwrite, \
+    lambda.zip --no-compile --overwrite
 
 CMD echo "build complete"
